# hahn

./: HahnAcyclic.v  HahnAdjacent.v  HahnDom.v  HahnEquational.v  HahnKat.v  HahnKatTest.v  HahnMaxElt.v  HahnMinElt.v  HahnMinPath.v  HahnPath.v  HahnRelationsBasic.v  HahnRelationsBasicDef.v  HahnRewrite.v  HahnSegment.v  HahnTotalList.v  HahnWf.v  README.md  _CoqProject  calc_stats.py  pyproject.toml
